[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-gateway-bench"
version = "0.1.0"
description = "CLI benchmarking tool for LLM API gateways — measure latency, TTFT, and throughput across providers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["llm", "benchmark", "openai", "anthropic", "latency", "ttft", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "anyio>=4.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
lgb = "llm_gateway_bench.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/llm-gateway-bench"
Repository = "https://github.com/YOUR_USERNAME/llm-gateway-bench"
Issues = "https://github.com/YOUR_USERNAME/llm-gateway-bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_gateway_bench"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PIE"]
ignore = ["B008"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
